"fix" for timezone shifts

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body { font-family:Arial, Helvetica, sans-serif; background:#fff; }
 
-table { margin:10px; }
+table { margin:10px; margin-right:200px; }
 
 table tr:not(:first-child) { border-top:2px solid #dee1e1; }
 table tr th { font-size:14px; color:#6B6B6B; font-weight:normal; text-align:left; }
